Attempted fix title margins on mobile
Attempted fix title margins on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -886,6 +886,11 @@ btn:visited
     .card__price-value{
         font-size:4rem
     }
+
+    .headingPrimaryMain
+    {
+        margin-top: 75% !important;
+    }
 }
 
 
